Changes for 1.8.5rc1

 - [ZBX-416] fixed PostgreSQL errors in configuration sender module when using DM setup (Sasha)
 - [ZBX-3346] fixed items being polled more frequently than necessary (Sasha)
 - [ZBX-3409] fixed semaphore and shared memory access permissions (Sasha)
 - [ZBX-3173] made server-side JSON parser ignore whitespace better (asaveljevs)
 - [ZBX-3425] updated Brazilian Portuguese translation; thanks to Murilo Moreira de Oliveira (Richlv)
 - [ZBX-3403] fixed SQL statements for auto registration and discovery operations (Sasha)
 - [ZBX-3403] removed UNIQUE constraint for autoreg_host_1 index (Sasha)
 - [ZBX-3414] expressions for triggers with web items are marked as error in trigger wizard (Vedmak)
 - [ZBX-3406] better api validation (Vedmak)
 - [ZBX-3413] added escaping of parameters used in LIKE SQL statements (KB)
 - [ZBX-3391] fixed wrong comparison operators used for strings (Vlad)
 - [ZBX-1346] document LogSlowQueries configuration parameter (Richlv)
 - [ZBXNEXT-612] added mapname url parameter for monitoring->maps (Vedmak)
 - [ZBX-886] remove duplicate translation strings (Richlv)
 - [ZBX-3384] fixed server crash in a distributed monitoring setup with PostgreSQL (asaveljevs)
 - [ZBX-3274] fixed SQLite3 semaphore errors while starting server or proxy (Sasha)
 - [ZBXNEXT-614] add Slovak translation; thanks to Marcel Hecko (Richlv)
 - [ZBX-2914] add Ubuntu upstart files; thanks to S. Canchon (Richlv)
 - [ZBX-3381] negative multipliers for items with value type "numeric (float)" are now allowed (KB)
 - [ZBX-1357] updated Japanese translation (Richlv)
 - [ZBX-3385] fixed trigger status change record in audit log (Vedmak)
 - [ZBX-2825] make profiles form redirect to the last visited page on save or cancel (Vlad)
 - [ZBX-3383] fixed error in audit log when filter by Macro or Template (Vedmak)
 - [ZBX-3378] updated Russian translation; thanks to dotneft and zalex_ua (Richlv)